# pyMC_Repeater

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  buildroot-manage.sh  config.yaml.example  convert_firmware_key.sh  docker-compose.build.yml  docker-compose.yml  docker-entrypoint.sh  dockerfile  env.example  manage.sh  openhop-repeater.service  policy.yaml  pyproject.toml  radio-presets.json  radio-settings.json  setup-radio-config.sh  setup.py
.github/workflows/: docker-publish.yml  pr-checks.yml
debian/: .gitignore  changelog  control  debhelper-build-stamp  rules
docs/: adding_sensors.md
repeater/: __init__.py  airtime.py  config.py  config_manager.py  engine.py  identity_manager.py  keygen.py  local_cli.py  main.py  packet_router.py  policy_engine.py  service_utils.py
repeater/companion/: __init__.py  bridge.py  constants.py  frame_server.py  identity_resolve.py  utils.py
scripts/: build-dev.sh  build-prod.sh  check_openapi_contract.py  precommit-pytest.sh  proxmox-install.sh  setup-build-env.sh
tests/: test_airtime.py  test_api_endpoints_core_coverage.py  test_api_policy_endpoints.py  test_auth_components.py  test_auth_endpoints.py  test_companion_bridge_frame_utils.py  test_companion_bridge_prefs.py  test_companion_settings.py  test_companion_ws_proxy.py  test_config_manager.py  test_config_radio.py  test_engine.py  test_flood_loop_dedup.py  test_glass_handler.py  test_gps_service.py  test_handler_helpers_acl_advert.py  test_handler_helpers_mesh_cli.py  test_handler_helpers_path_protocol_text.py  test_handler_helpers_room_server.py  test_handler_helpers_trace_discovery_login.py  test_http_server_unit.py  test_identity_manager_and_repeater_cli.py  test_keygen_local_cli.py  test_main_py_coverage.py  test_main_py_more.py  test_mqtt_publish_integration.py  test_openapi_identity_contract.py  test_packet_duration.py  test_packet_router.py  test_path_hash_mode_advert.py  test_path_hash_protocol.py  test_policy_engine.py  test_presets.py  test_python310_compat.py  test_radio_config.py  test_sensors.py  test_service_utils.py  test_setup_wizard_pymc.py  test_sqlite_handler_easy.py  test_storage_collector_ws_stats_throttle.py  (+2 more)
(+211 files in other folders)
